--- a/project/backend/src/package.json
+++ b/project/backend/src/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "jsonschema": "^1.4.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "sqlite3": "^5.0.8"
   }
 }
