--- a/project/backend/src/package.json
+++ b/project/backend/src/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "jsonschema": "^1.4.0",
     "pg": "^8.7.3",
     "sqlite3": "^5.0.8"
