--- a/project/backend/src/package.json
+++ b/project/backend/src/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "jsonschema": "^1.4.0",
+    "mongodb": "^4.7.0",
     "pg": "^8.7.3",
     "sqlite3": "^5.0.8"
   }
